# text-to-sql-guardrails

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  knowledge_base.py  main.py  pyproject.toml  railway.toml  skills-lock.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260420_1000_add_schema_embeddings.py  20260420_1001_add_query_history.py  20260424_1000_add_document_type_to_schema_embeddings.py
app/: main.py
app/api/: admin_router.py  query_router.py
app/guardrails/: base.py  factory.py  schema_validator.py  sensitive_validator.py  sql_validator.py
app/integrations/: chain.py  llm_client.py
app/models/: query_history.py
app/repositories/: query_repository.py  schema_repository.py
app/schemas/: query_request.py  query_response.py  sql_output.py  sql_result.py
app/services/: embedding_service.py  indexing_service.py  query_service.py  tasks.py
docker/: entrypoint.sh
docker/init_client/: seed_starbucks.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  railway.toml  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: pre_deploy_check.py  reindex_all.py  seed_client_db.py
tests/: conftest.py
tests/integration/: conftest.py  test_celery_pipeline.py  test_end_to_end.py  test_guardrails_pipeline.py  test_indexing_pipeline.py  test_pipeline.py  test_reindex.py
tests/unit/api/: test_admin_router.py  test_query_router_async.py
tests/unit/guardrails/: test_factory.py  test_schema_validator.py  test_sensitive_validator.py  (+1 more)
(+25 files in other folders)
